# ubirch-notary-endpoint

./: Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  run-test-env.sh
ethereum-service-mock/: Dockerfile  ethereum-service-mock.sh
helm-charts/notary-endpoint/: Chart.yaml  values.yaml
helm-charts/notary-endpoint/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  notary-service-httpauth.yaml  service.yaml
src/: main.rs
