[package]
name = "ubirch-notary-endpoint"
version = "0.1.0"
authors = ["mrobakowski <mikolaj.robakowski@ubirch.com>"]
edition = "2018"

[dependencies]
warp = "0.1.11"
rdkafka = "0.18.0"
hex = "0.3.2"
serde = "1.0.85"
serde_derive = "1.0.85"
futures = "0.1.25"
tokio = "0.1.14"
env_logger = "0.6.0"
log = "0.4.6"
serde_json = "1.0.37"
exitfailure = "0.5.1"
failure = "0.1.5"
