[package]
name = "ubirch-notary-endpoint"
version = "0.1.0"
authors = ["mrobakowski <mikolaj.robakowski@ubirch.com>"]
edition = "2018"

[dependencies]
warp = "0.1.15"
rdkafka = "0.21.0"
hex = "0.3.2"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
futures = "0.1.27"
tokio = "0.1.20"
env_logger = "0.6.1"
log = "0.4.6"
exitfailure = "0.5.1"
failure = "0.1.5"
